--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -1,439 +1,1 @@
-.investment {
-  background:  #2E2E31;
-}
-.investment__wrapper {
-  margin: 0 250px;
-}
-.investment-body {
-  display: flex;
-  column-gap: 320px;
-  padding: 150px 0 100px 0;
-}
-/* .investment-body-cs{
-  margin-left: 29%;
-}
-.investment-body-eng{
-  margin-left: 26%;
-} */
-.investment-body-content {
-  max-width: 667px;
-}
-.lead__download-links-list {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  column-gap: 30px;
-}
-#more {
-  display: none;
-}
-.investment__image {
-  position: absolute;
-  top: 380px
-}
-.investment-body__title {
-  font-size: 72px;
-  line-height: 87px;
-  color: #fff;
-  margin-bottom: 50px;
-}
-.investment-body__title_color {
-  color: #00A9DE;
-}
-.investment-body__text {
-  max-width: 667px;
-  font-size: 24px;
-  color: #fff;
-  margin-bottom: 50px;
-}
-.card__wrapper {
-  margin: 235px 250px 200px 250px;
-}
-.card {
-  display: flex;
-  column-gap: 50px;
-}
-.card__image-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 618px;
-}
-.card-body__list_2 {
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 44px;
-  color: #007094;
-  margin: 20px 0px 20px 0;
-}
-.card-body__list_4 {
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 44px;
-  color: #007094;
-  margin: 20px 0px 20px 0;
-}
-.card-body__text {
-  padding-right: 30px;
-  font-size: 24px;
-  line-height: 29px;
-  font-weight: 400;
-}
-.card-body__list_copy{
-  cursor: pointer;
-  background-color: #fff;
-}
-.sfera__wrapper {
-  margin: 0 256px;
-}
-.sfera-body__uptext {
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 58px;
-  margin-bottom: 40px;
-}
-.sfera-body__downtext {
-  font-size: 24px;
-  line-height: 29px;
-  font-weight: 400;
-  padding-right: 110px;
-}
-.sfera-body-content {
-  max-width: 835px;
-}
-.sfera-body__link {
-  padding-left: 25px;
-  margin-bottom: 100px;
-}
-.venchur__wrapper {
-  margin: 0 256px;
-}
-.venchur-body-content {
-  max-width: 835px;
-}
-.venchur-body__title {
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 58px;
-  margin: 200px 0 40px 0;
-}
-.venchur__title {
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 58px;
-  margin: 200px 0 55px 0;
-}
-.venchur-list {
-  margin: 7px 0 7px 0;
-}
-.venchur__downtext {
-  margin: 48px 0 100px 0;
-}
-.venchur-body-list {
-  font-size: 24px;
-  line-height: 29px;
-  margin-bottom: 40px;
-  list-style: none;
-} 
-.venchur-body__undertitle {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  margin-bottom: 40px;
-}
-.venchur-body__link { 
-  padding: 0;
-} 
-.venchur__link {
-  padding-left: 25px;
-}
-#btn {
-  cursor: pointer;
-  color: #007094;
-}
-@media screen and  (max-width: 1440px) {
-  .investment__wrapper,
-  .sfera__wrapper,
-  .venchur__wrapper {
-    margin: 0 150px;
-  }
-  .investment-body {
-    column-gap: 150px;
-  }
-  /* .investment-body-cs{
-    margin-left: 20%;
-  } */
-  .card__wrapper {
-    margin: 234px 50px 110px 89px;
-  }
-}
-@media screen and  (max-width: 1240px) {
-  .investment__wrapper,
-  .sfera__wrapper,
-  .venchur__wrapper {
-    margin: 0 80px;
-  }
-  .investment-body {
-    column-gap: 80px;
-  }
-  /* .investment-body-eng{
-    margin-left: 20%;
-  } */
-  .card {
-    column-gap: 0px;
-}
-}
-@media screen and  (max-width: 1185px) {
-.investment__image {
-  position: absolute;
-  top: 360px;
-  right: 40px;
-  width: 300px;
-}
-.investment-body {
-  display: flex;
-  column-gap: 320px;
-  padding: 0px 0 100px 0;
-}
-}
-@media screen and  (max-width: 1024px) {
-  .investment__image {
-    width: 285px;
-}
-.card__image-center {
-  width: 500px;
-}
-}
-@media screen and  (max-width: 768px) {
-
-  .investment-body {
-    display: flex;
-    column-gap: 320px;
-    padding: 100px 0 100px 0;
-  }
-  .investment__wrapper,
-  .sfera__wrapper,
-  .venchur__wrapper,
-  .card__wrapper {
-    margin: 0 50px;
-  }
-  .investment-body__title {
-    font-size: 48px;
-    line-height: 58px;
-    font-weight: 700;
-    margin-bottom: 20px;
-  }
-  .investment-body__text {
-    max-width: 337px;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-    margin-bottom: 10px;
-  }
-  /* .investment-body-eng{
-    margin-left: 24%;
-  } */
-  .card {
-    flex-direction: column;
-  }
-  .investment__image {
-    position: absolute;
-    width: 230px;
-    top: 110px;
-    right: 80px;
-  }
-  .lead__download-links-list {
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .card__image-center {
-    width: 386px;
-    margin: 50px auto;
-  }
-  .card-body__link,
-  .card-body__text,
-  .venchur__downtext {
-    margin: 50px 0 50px 0;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-  }
-  .venchur-body-list,
-  .venchur-list,
-  .sfera-body__downtext,
-  .sfera-body__link {
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-  }
-  .card-body__list_2 {
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-  }
-  .sfera-body__uptext,
-  .venchur-body__title {
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-    margin: 55px 0 40px 0;
-  }
-  .venchur__title {
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-    margin: 100px 0 55px 0;
-  }
-  .venchur__downtext {
-    margin: 48px 0 50px 0;
-  }
-}
-@media screen and  (max-width: 425px) {
-  .investment__wrapper, 
-  .sfera__wrapper, 
-  .venchur__wrapper,
-  .card__wrapper {
-    margin: 0 16px;
-  }
-  .investment-body {
-    row-gap: 0;
-    padding: 100px 0 10px 0;
-}
-.investment-body-cs{
-  display: block;
-}
-.investment-body-eng{
-  margin-left: 0%;
-}
-  .lead__download-links-list {
-    flex-direction: column-reverse;
-    margin-top: 375px;
-    margin-left: 20px;
-  }
-  .lead__download-links-list-cs{
-    margin-top: 425px;
-  }
-  .lead__download-links-list-eng{
-    margin-top: 425px;
-  }
-  .investment-body-content-cs{
-    margin-left: 0px;
-  }
-  
-  .investment-body__title {
-    width: 200px;
-    font-size: 22px;
-    line-height: 26px;
-    font-weight: 600;
-    margin-bottom: 20px;
-  }
-  .investment-body__text {
-    max-width: 172px;
-    font-size: 14px;
-    line-height: 17px;
-    font-weight: 400;
-    margin-bottom: 20px;
-  }
-  .investment-body__text-cs{
-    max-width: 300px;
-  }
-  .investment-body__text-eng{
-    max-width: 315px;
-  }
-  .investment__image {
-    width: 164px;
-    top: 353px;
-    right: 124px;
-  }
-  .card__image-center {
-    width: 308px;
-  }
-  .card-body__link, .card-body__text, 
-  .venchur__downtext {
-    margin: 40px 0 40px 0;
-    font-size: 14px;
-    line-height: 17px;
-    font-weight: 400;
-    padding-left: 15px;
-  }
-  .card-body__list_2,
-  .card-body__list_4{
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 26px;
-  }
-  .sfera-body__uptext, 
-  .venchur-body__title,
-  .venchur__title  {
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 26px;
-    margin: 0 0 0px 0;
-    width: 240px;
-  }
-  .venchur-body-list,
-  .sfera-body__link{
-    margin-bottom: 20px;
-  }
-  .venchur__title {
-    width: 270px;
-  }
-  .venchur-body__undertitle {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    margin-bottom: 20px;
-  }
-  .venchur-body-list, 
-  .venchur-list, 
-  .sfera-body__downtext,
-  .sfera-body__link { 
-    font-size: 14px;
-    line-height: 17px;
-    font-weight: 400;
-  }
-  #btn {
-    font-size: 14px;
-    line-height: 17px;
-    font-weight: 600;
-  }
-  .card-body__list_copy{
-    width: 10%;
-  }
-  .card-body__list_copy-img{
-    width: 100%;
-  }
-}
-@media screen and  (max-width: 375px) {
-  .investment__image {
-    width: 142px;
-    top: 400px;
-    right: 110px;
-  }
-}
-@media screen and  (max-width: 320px) {
-  .investment-body__text {
-    max-width: 210px;
-  }
-  .investment-body__text-cs{
-    max-width: 300px;
-  }
-  .lead__download-links-list {
-    margin-left: -5px;
-  }
-  .button_type_ios-invest::after {
-  background-position: 56px;
-  }
-  .investment__image {
-    width: 142px;
-    top: 380px;
-    right: 85px;
-  }
-  .card__image-center {
-    width: 280px;
-  }
-  .card-body__list_2,
-  .card-body__list_4{
-    font-size: 20px;
-  }
-}
+.investment{background:#2e2e31}.investment__wrapper{margin:0 250px}.investment-body{display:flex;column-gap:320px;padding:150px 0 100px 0}.investment-body-content{max-width:667px}.lead__download-links-list{display:flex;list-style:none;padding:0;column-gap:30px}#more{display:none}.investment__image{position:absolute;top:380px}.investment-body__title{font-size:72px;line-height:87px;color:#fff;margin-bottom:50px}.investment-body__title_color{color:#00a9de}.investment-body__text{max-width:667px;font-size:24px;color:#fff;margin-bottom:50px}.card__wrapper{margin:235px 250px 200px 250px}.card{display:flex;column-gap:50px}.card__image-center{display:flex;justify-content:center;align-items:center;width:618px}.card-body__list_2{font-weight:600;font-size:36px;line-height:44px;color:#007094;margin:20px 0 20px 0}.card-body__list_4{font-weight:600;font-size:36px;line-height:44px;color:#007094;margin:20px 0 20px 0}.card-body__text{padding-right:30px;font-size:24px;line-height:29px;font-weight:400}.card-body__list_copy{cursor:pointer;background-color:#fff}.sfera__wrapper{margin:0 256px}.sfera-body__uptext{font-weight:700;font-size:48px;line-height:58px;margin-bottom:40px}.sfera-body__downtext{font-size:24px;line-height:29px;font-weight:400;padding-right:110px}.sfera-body-content{max-width:835px}.sfera-body__link{padding-left:25px;margin-bottom:100px}.venchur__wrapper{margin:0 256px}.venchur-body-content{max-width:835px}.venchur-body__title{font-weight:700;font-size:48px;line-height:58px;margin:200px 0 40px 0}.venchur__title{font-weight:700;font-size:48px;line-height:58px;margin:200px 0 55px 0}.venchur-list{margin:7px 0 7px 0}.venchur__downtext{margin:48px 0 100px 0}.venchur-body-list{font-size:24px;line-height:29px;margin-bottom:40px;list-style:none}.venchur-body__undertitle{font-weight:400;font-size:18px;line-height:22px;margin-bottom:40px}.venchur-body__link{padding:0}.venchur__link{padding-left:25px}#btn{cursor:pointer;color:#007094}@media screen and (max-width:1440px){.investment__wrapper,.sfera__wrapper,.venchur__wrapper{margin:0 150px}.investment-body{column-gap:150px}.card__wrapper{margin:234px 50px 110px 89px}}@media screen and (max-width:1240px){.investment__wrapper,.sfera__wrapper,.venchur__wrapper{margin:0 80px}.investment-body{column-gap:80px}.card{column-gap:0}}@media screen and (max-width:1185px){.investment__image{position:absolute;top:360px;right:40px;width:300px}.investment-body{display:flex;column-gap:320px;padding:0 0 100px 0}}@media screen and (max-width:1024px){.investment__image{width:285px}.card__image-center{width:500px}}@media screen and (max-width:768px){.investment-body{display:flex;column-gap:320px;padding:100px 0 100px 0}.card__wrapper,.investment__wrapper,.sfera__wrapper,.venchur__wrapper{margin:0 50px}.investment-body__title{font-size:48px;line-height:58px;font-weight:700;margin-bottom:20px}.investment-body__text{max-width:337px;font-size:18px;line-height:22px;font-weight:400;margin-bottom:10px}.card{flex-direction:column}.investment__image{position:absolute;width:230px;top:110px;right:80px}.lead__download-links-list{flex-direction:column;row-gap:10px}.card__image-center{width:386px;margin:50px auto}.card-body__link,.card-body__text,.venchur__downtext{margin:50px 0 50px 0;font-size:18px;line-height:22px;font-weight:400}.sfera-body__downtext,.sfera-body__link,.venchur-body-list,.venchur-list{font-size:18px;line-height:22px;font-weight:400}.card-body__list_2{font-weight:700;font-size:32px;line-height:38px}.sfera-body__uptext,.venchur-body__title{font-weight:700;font-size:32px;line-height:38px;margin:55px 0 40px 0}.venchur__title{font-weight:700;font-size:32px;line-height:38px;margin:100px 0 55px 0}.venchur__downtext{margin:48px 0 50px 0}}@media screen and (max-width:425px){.card__wrapper,.investment__wrapper,.sfera__wrapper,.venchur__wrapper{margin:0 16px}.investment-body{row-gap:0;padding:100px 0 10px 0}.investment-body-cs{display:block}.investment-body-eng{margin-left:0}.lead__download-links-list{flex-direction:column-reverse;margin-top:375px;margin-left:20px}.lead__download-links-list-cs{margin-top:425px}.lead__download-links-list-eng{margin-top:425px}.investment-body-content-cs{margin-left:0}.investment-body__title{width:200px;font-size:22px;line-height:26px;font-weight:600;margin-bottom:20px}.investment-body__text{max-width:172px;font-size:14px;line-height:17px;font-weight:400;margin-bottom:20px}.investment-body__text-cs{max-width:300px}.investment-body__text-eng{max-width:315px}.investment__image{width:164px;top:353px;right:124px}.card__image-center{width:308px}.card-body__link,.card-body__text,.venchur__downtext{margin:40px 0 40px 0;font-size:14px;line-height:17px;font-weight:400;padding-left:15px}.card-body__list_2,.card-body__list_4{font-weight:400;font-size:22px;line-height:26px}.sfera-body__uptext,.venchur-body__title,.venchur__title{font-weight:600;font-size:22px;line-height:26px;margin:0;width:240px}.sfera-body__link,.venchur-body-list{margin-bottom:20px}.venchur__title{width:270px}.venchur-body__undertitle{font-weight:400;font-size:14px;line-height:17px;margin-bottom:20px}.sfera-body__downtext,.sfera-body__link,.venchur-body-list,.venchur-list{font-size:14px;line-height:17px;font-weight:400}#btn{font-size:14px;line-height:17px;font-weight:600}.card-body__list_copy{width:10%}.card-body__list_copy-img{width:100%}}@media screen and (max-width:375px){.investment__image{width:142px;top:400px;right:110px}}@media screen and (max-width:320px){.investment-body__text{max-width:210px}.investment-body__text-cs{max-width:300px}.lead__download-links-list{margin-left:-5px}.button_type_ios-invest::after{background-position:56px}.investment__image{width:142px;top:380px;right:85px}.card__image-center{width:280px}.card-body__list_2,.card-body__list_4{font-size:20px}}
