--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -1,345 +1,1 @@
-.lead__download-links-list {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  column-gap: 30px;
-}
-.lead__wrapper {
-  margin: 0 180px;
-  background: #2E2E31;
-  padding-top: 100px;
-}
-.lead__title-color {
-  color: #00A9DE;
-}
-
-.lead {
-  background: #2E2E31;
-  padding: 0 0 100px 0;
-}
-.lead__content {
-  display: flex;
-  column-gap: 280px;
-  justify-content: center;
-  align-items: center;
-  /* padding: 80px 0; */
-}
-.lead__content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  align-items: center;
-}
-.lead-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: rgba(255, 255, 255, 0.87);
-}
-.lead__title {
-  font-weight: 700;
-  font-size: 86px;
-  line-height: 104px;
-  margin: 0 0 50px 0;
-  
-}
-.lead__subtitle {
-  font-size: 24px;
-  line-height: 30px;
-  font-weight: 400;
-  margin:0 0 40px 0;
-  padding: 0;
-}
-.lead__slogan {
-  font-size: 36px;
-  line-height: 43px;
-  font-weight: 600;
-}
-
-.lead__images {
-  display: flex;
-  column-gap: 26px;
-}
-.lead__image {
-  width: 230px;
-  height: 505px;
-}
-.description {
-  background: #2E2E31; 
-}
-.description__wrapper {
-  margin: 0 200px;
-}
-.description__heading__content {
-  margin-top: 140px ;
-  color: rgba(255, 255, 255, 0.87);
-  text-align: center;
-}
-.description__heading__content__heading {
-  margin: 0;
-}
-.description__heading__content__heading__color {
-  color: #00A9DE;
-}
-
-@media screen and  (max-width: 1440px) {
-  .lead__wrapper {
-    margin: 0 150px;
-  }
-  .lead__content {
-    column-gap: 50px;
-  }
-  .lead__subtitle {
-    margin-bottom: 90px;
-  }
-  .lead__images {
-    column-gap: 30px;
-  }
-  .lead__title {
-    font-size: 68px;
-    line-height: 80px;
-    font-weight: 300;
-    margin:0 0 20px 0;
-    
-  }
-}
-@media screen and  (max-width: 1240px){
-  .lead__wrapper {
-    margin: 0 40px;
-  }
-  .lead__content {
-    column-gap: 20px;
-    padding: 20px 0;
-  }
-  .lead__subtitle {
-    font-size: 30px;
-    line-height: 43px;
-    font-weight: 200;
-    margin: 0 0 50px 0;
-  }
-  .lead__title {
-    font-size: 48px;
-    line-height: 57px;
-  }
-  .lead__slogan {
-    font-size: 30px;
-    line-height: 43px;
-  }
-  .lead__button:first-child {
-    margin-right: 20px;
-  } 
-  .description__heading__content {
-    margin-top: 110px;
-  }
-}
-@media screen and  (max-width: 1185px){
-  .lead__images {
-    column-gap: 15px;
-  }
-  .lead__image {
-    width: 220px;
-    height: 481px;
-  }
-  .lead__wrapper {
-    margin: 0 180px;
-    background: #2E2E31;
-    padding-top: 40px;
-}
-}
-@media screen and  (max-width: 1024px){
-.lead__image {
-  width: 189px;
-  height: 424px;
-}
-.lead__download-links-list {
-  column-gap: 8px;
-}
-}
-@media screen and  (max-width: 992px){
-  .lead__wrapper {
-    margin: 0 44px;
-  }
-  .lead__title {
-    font-size: 30px;
-    line-height: 50px;
-    font-weight: 300;
-    margin:0 0 20px 0;
-  }
-  .lead__subtitle {
-    font-size: 19px;
-    line-height: 26px;
-    font-weight: 400;
-    margin-bottom: 30px;
-  }
-  .lead__slogan {
-    font-size: 28px;
-    line-height: 34px;
-    font-weight: 600;
-    margin: 0 ;
-  }
-  
-  .lead__button {
-    font-size: 16px;
-    line-height: 25px;
-    font-weight: 400;
-    padding: 10px 15px;
-  }
-  .lead__images {
-    column-gap: 26px;
-}
-  .lead__button:first-child {
-    margin-right: 20px;
-  }
-}
-@media screen and  (max-width: 768px){
-
-  .lead__image {
-    width: 225px;
-    height: 488px;
-  }
-
-.lead__wrapper {
-    margin: 0 16px;
-  }
-  .description__wrapper {
-    margin: 0 70px;
-}
-  .lead__download-links-list {
-    flex-direction: row-reverse;
-    margin-top: 530px;
-}
-.description__heading__content__heading {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 22px;
-}
-.description__heading__content__paragraf {
-  font-weight: 400;
-font-size: 18px;
-line-height: 22px;
-}
-.description__heading__content {
-  margin-top: 100px;
-}
-  .lead__button:first-child {
-    margin-right: 0;
-  }
-  .lead__buttons {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 20px;
-  }
-.lead__content {
-    flex-direction: column;
-    align-items: center;
-    row-gap: 0;
-    margin: 0;
-  }
-  .lead__title {
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 58px;
-    margin:0 0 50px 0;
-  }
-    .lead__subtitle {
-      font-size: 19px;
-      line-height: 26px;
-      font-weight: 400;
-      margin-bottom: 110px;
-  }
-  .lead__button {
-    padding: 5px 45px;
-    margin-bottom: 10px;
-  }
-  .lead__slogan {
-    font-size: 22px;
-    line-height: 26px;
-    font-weight: 600;
-    margin: 280px 0 0 40px;
-    justify-content: center;
-  }
-  .lead__images {
-    position: absolute;
-    top: 520px;
-    left: 125px;
-    object-fit: contain;
-    width: 200px;
-  }
-  .lead-text {
-    margin-top: 100px;
-  }
-}
-@media screen and  (max-width: 425px){
-  .lead__title {
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 26px;
-    margin: 0 0 20px 0;
-}
-  .lead__slogan {
-    font-size: 22px;
-    line-height: 26px;
-    font-weight: 600;
-    margin: 280px 0 0 20px;
-    justify-content: center;
-  }
-  .lead__subtitle {
-    margin: 0 0 30px 0;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 300;
-  }
-  .lead__image {
-    width: 133px;
-    height: 295px;
-  }
-  .description__heading__content {
-    margin-top: 50px;
-}
-  .lead-text {
-    margin-top: 0px;
-}
-.lead__images {
-  position: absolute;
-  top: 260px;
-  left: 50px;
-  object-fit: contain;
-  width: 200px;
-}
-  .lead__download-links-list {
-    flex-direction: column-reverse;
-    row-gap: 10px;
-    margin-top: 350px;
-    align-items: center;
-  }
-.description__wrapper {
-  margin: 0 20px;
-  }
-}
-
-@media screen and  (max-width: 375px){
-  .lead__images {
-    position: absolute;
-    top: 300px;
-    left: 35px;
-    object-fit: contain;
-    width: 200px;
-  }
-}
-@media screen and  (max-width: 320px){
-  .lead__images {
-    left: 10px;
-    object-fit: contain;
-    width: 200px;
-  }
-  .lead__images {
-    column-gap: 16px;
-  }
-  .lead__download-links-list {
-    flex-direction: column-reverse;
-    row-gap: 10px;
-    margin-top: 425px;
-    align-items: center;
-}
-}
+.lead__download-links-list{display:flex;list-style:none;padding:0;column-gap:30px}.lead__wrapper{margin:0 180px;background:#2e2e31;padding-top:100px}.lead__title-color{color:#00a9de}.lead{background:#2e2e31;padding:0 0 100px 0}.lead__content{display:flex;column-gap:280px;justify-content:center;align-items:center}.lead__content{display:flex;align-items:center;justify-content:center;align-items:center}.lead-text{display:flex;flex-direction:column;justify-content:center;color:rgba(255,255,255,.87)}.lead__title{font-weight:700;font-size:86px;line-height:104px;margin:0 0 50px 0}.lead__subtitle{font-size:24px;line-height:30px;font-weight:400;margin:0 0 40px 0;padding:0}.lead__slogan{font-size:36px;line-height:43px;font-weight:600}.lead__images{display:flex;column-gap:26px}.lead__image{width:230px;height:505px}.description{background:#2e2e31}.description__wrapper{margin:0 200px}.description__heading__content{margin-top:140px;color:rgba(255,255,255,.87);text-align:center}.description__heading__content__heading{margin:0}.description__heading__content__heading__color{color:#00a9de}@media screen and (max-width:1440px){.lead__wrapper{margin:0 150px}.lead__content{column-gap:50px}.lead__subtitle{margin-bottom:90px}.lead__images{column-gap:30px}.lead__title{font-size:68px;line-height:80px;font-weight:300;margin:0 0 20px 0}}@media screen and (max-width:1240px){.lead__wrapper{margin:0 40px}.lead__content{column-gap:20px;padding:20px 0}.lead__subtitle{font-size:30px;line-height:43px;font-weight:200;margin:0 0 50px 0}.lead__title{font-size:48px;line-height:57px}.lead__slogan{font-size:30px;line-height:43px}.lead__button:first-child{margin-right:20px}.description__heading__content{margin-top:110px}}@media screen and (max-width:1185px){.lead__images{column-gap:15px}.lead__image{width:220px;height:481px}.lead__wrapper{margin:0 180px;background:#2e2e31;padding-top:40px}}@media screen and (max-width:1024px){.lead__image{width:189px;height:424px}.lead__download-links-list{column-gap:8px}}@media screen and (max-width:992px){.lead__wrapper{margin:0 44px}.lead__title{font-size:30px;line-height:50px;font-weight:300;margin:0 0 20px 0}.lead__subtitle{font-size:19px;line-height:26px;font-weight:400;margin-bottom:30px}.lead__slogan{font-size:28px;line-height:34px;font-weight:600;margin:0}.lead__button{font-size:16px;line-height:25px;font-weight:400;padding:10px 15px}.lead__images{column-gap:26px}.lead__button:first-child{margin-right:20px}}@media screen and (max-width:768px){.lead__image{width:225px;height:488px}.lead__wrapper{margin:0 16px}.description__wrapper{margin:0 70px}.lead__download-links-list{flex-direction:row-reverse;margin-top:530px}.description__heading__content__heading{font-weight:600;font-size:18px;line-height:22px}.description__heading__content__paragraf{font-weight:400;font-size:18px;line-height:22px}.description__heading__content{margin-top:100px}.lead__button:first-child{margin-right:0}.lead__buttons{display:flex;flex-direction:column;justify-content:center;margin-top:20px}.lead__content{flex-direction:column;align-items:center;row-gap:0;margin:0}.lead__title{font-weight:700;font-size:48px;line-height:58px;margin:0 0 50px 0}.lead__subtitle{font-size:19px;line-height:26px;font-weight:400;margin-bottom:110px}.lead__button{padding:5px 45px;margin-bottom:10px}.lead__slogan{font-size:22px;line-height:26px;font-weight:600;margin:280px 0 0 40px;justify-content:center}.lead__images{position:absolute;top:520px;left:125px;object-fit:contain;width:200px}.lead-text{margin-top:100px}}@media screen and (max-width:425px){.lead__title{font-weight:600;font-size:22px;line-height:26px;margin:0 0 20px 0}.lead__slogan{font-size:22px;line-height:26px;font-weight:600;margin:280px 0 0 20px;justify-content:center}.lead__subtitle{margin:0 0 30px 0;font-size:16px;line-height:26px;font-weight:300}.lead__image{width:133px;height:295px}.description__heading__content{margin-top:50px}.lead-text{margin-top:0}.lead__images{position:absolute;top:260px;left:50px;object-fit:contain;width:200px}.lead__download-links-list{flex-direction:column-reverse;row-gap:10px;margin-top:350px;align-items:center}.description__wrapper{margin:0 20px}}@media screen and (max-width:375px){.lead__images{position:absolute;top:300px;left:35px;object-fit:contain;width:200px}}@media screen and (max-width:320px){.lead__images{left:10px;object-fit:contain;width:200px}.lead__images{column-gap:16px}.lead__download-links-list{flex-direction:column-reverse;row-gap:10px;margin-top:425px;align-items:center}}
