--- a/assets/css/landing-card.css
+++ b/assets/css/landing-card.css
@@ -1,291 +1,1 @@
-.section-card {
-	background:  #2E2E31;
-	padding: 80px 250px ;
-}
-.card-block-link-botton,
-.card-block-link {
-	display: none;
-}
-.card {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
-	column-gap: 277px;
-	justify-content: center;
-}
-.card-block {
-	cursor: pointer;
-	margin-bottom: 40px;
-	perspective: 1000px;
-}
-.product-inner {
-	transition: transform 1.2s linear;
-	position: relative;
-	width: 100%;
-	height: 75%;
-	transform-style: preserve-3d;
-}
-
-.card-block-botton {
-	margin-top: 50px;
-	text-align: center;
-	color: rgba(255, 255, 255, 0.87);
-	font-size: 20px;
-	line-height: 24px;
-}
-.card-block-top {
-	display: block;
-	font-size: 24px;
-	line-height: 30px;
-	margin: 10px auto;
-	border: none;
-	padding: 8px;
-	color: #00A9DE;
-	background: rgba(0, 169, 222, 0.1);
-	border-radius: 3px;
-}
-.card-3d {
-	perspective: 1000px;
-	cursor: pointer;
-	width: 296px;
-	height: 600px;
-}
-.product-front {
-	position: absolute;
-	/* width: 76%; */
-	left: -5px;
-	border-radius: 35px;
-	transform: translateZ(7.8px);
-}
-.product-back {
-	transition: transform 1.2s linear;
-	border-radius: 35px;
-	right: -55px;
-	width: 64%;
-	position: relative;
-	height: 300px;
-	transform: translateZ(-7.8px);
-}
-.left-side {
-	width: 16px;
-	height: 96%;
-	background: #1e1d1d;
-	transform: rotateY(90deg);
-	margin-top: 310px;
-	position: relative;
-	margin-left: 0px;
-	bottom: 589px;
-}
-.product-inner:hover {
-	transform: rotateY(180deg);
-	transition: transform 1.2s linear;
-}
-.back {
-	position: relative;
-	width: 275px;
-	height: 595px;
-	transform: rotateY(180deg);
-	left: -63px;
-}
-.front {
-	width: 275px;
-	height: 595px;
-}
-@media screen and (max-width: 1440px) {
-	.card {
-		column-gap: 150px;
-	}
-	.left-side{
-		height: 96%;
-	}
-}
-@media screen and (max-width: 1240px){
-	.card {
-		column-gap: 130px;
-	}
-}
-@media screen and (max-width: 1185px){
-	.card {
-		column-gap: 100px;
-	}
-}
-@media screen and (max-width: 1024px) {
-	.card {
-    column-gap: 60px;
-}
-}
-@media screen and (max-width: 768px) {
-	.section-card {
-    padding: 80px 70px;
-	}
-	.card-block-link-botton{
-		display: block;
-	}
-	.card {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-		column-gap: 63px;
-		justify-content: center;
-	}
-	.card-block__link {
-		font-size:14px ;
-		font-weight:600 ;
-		line-height:17px ;
-		position: relative;
-		top: 0px;
-	}
-	.eng-card-block__link{
-		top: 290px;
-	}
-	.section-card {
-    padding: 50px 70px;
-	}
-	.card-block {
-		margin-bottom: 100px
-	}
-	.card-block-botton{
-		margin-top: 50px;
-	}
-	.left-side {
-		height: 96%;
-		margin: 312px 0 0 0px;
-	}
-}
-@media screen and (max-width: 425px) {
-	.product-back {
-    right: 0px;
-	}
-	.section-card {
-    padding: 40px 40px;
-	}
-	.card {
-		column-gap: 30px;
-	}
-	.product-inner {
-    height: 78%;
-	}
-	.card-block-botton {
-    margin-top: 80px;
-		font-size: 14px;
-		line-height: 17px;
-		font-weight: 400;
-	}
-	.card-block-top {
-		font-size: 14px;
-		line-height: 20px;
-	}
-	.back{
-		width: 137px;
-		height: 297px;
-		left: 0px;
-	}
-	.front {
-		width: 137px;
-		height: 297px;
-		margin-left: 5px;
-}
-	.card-block {
-		width: 137px;
-		height: 297px;
-	}
-	.left-side {
-		width: 16px;
-		height: 277px;
-		margin-top: 301px;
-		margin-left: 0px;
-	}
-		
-	.card-block__link {
-		position: relative;
-		top: 180px;
-	}
-		.eng-card-block__link{
-		top: 180px;
-	} 
-	.card-block {
-		margin-bottom: 140px;
-	}
-}
-@media screen and (max-width: 375px) {
-	.product-back {
-    right: 0px;
-	}
-	.section-card {
-    padding: 40px 32px;
-	}
-	.card {
-		column-gap: 30px;
-	}
-	.product-inner {
-    height: 78%;
-	}
-	.card-block-botton {
-    margin-top: 80px;
-		font-size: 14px;
-		line-height: 17px;
-		font-weight: 400;
-	}
-	.card-block-top {
-		font-size: 14px;
-		line-height: 20px;
-	}
-	.back{
-		width: 137px;
-		height: 297px;
-		left: 0px;
-	}
-	.front {
-		width: 137px;
-		height: 297px;
-		margin-left: 5px;
-}
-	.card-block {
-		width: 137px;
-		height: 297px;
-	}
-	.left-side {
-		width: 16px;
-		height: 277px;
-		margin-top: 301px;
-		margin-left: 0px;
-	}
-		
-	.card-block__link {
-		position: relative;
-		top: 180px;
-	}
-		.eng-card-block__link{
-		top: 180px;
-	} 
-	.card-block {
-		margin-bottom: 140px;
-	}
-}
-@media screen and (max-width: 320px) {
-	.section-card {
-    padding: 40px 12px;
-	}
-	.product-back {
-    right: 0px;
-	}
-	.card {
-    column-gap: 10px;
-	}
-	.back{
-		width: 132px;
-		height: 297px;
-		left: 3px;
-	}
-	.front {
-		width: 132px;
-		height: 297px;
-		margin-left: 6px;
-	}
-	.left-side {
-		width: 16px;
-		height: 280px;
-		margin-top: 300px;
-		margin-left: 0px;
-	}
-}
+.section-card{background:#2e2e31;padding:80px 250px}.card-block-link,.card-block-link-botton{display:none}.card{display:grid;grid-template-columns:1fr 1fr 1fr;grid-template-rows:1fr 1fr 1fr;column-gap:277px;justify-content:center}.card-block{cursor:pointer;margin-bottom:40px;perspective:1000px}.product-inner{transition:transform 1.2s linear;position:relative;width:100%;height:75%;transform-style:preserve-3d}.card-block-botton{margin-top:50px;text-align:center;color:rgba(255,255,255,.87);font-size:20px;line-height:24px}.card-block-top{display:block;font-size:24px;line-height:30px;margin:10px auto;border:none;padding:8px;color:#00a9de;background:rgba(0,169,222,.1);border-radius:3px}.card-3d{perspective:1000px;cursor:pointer;width:296px;height:600px}.product-front{position:absolute;left:-5px;border-radius:35px;transform:translateZ(7.8px)}.product-back{transition:transform 1.2s linear;border-radius:35px;right:-55px;width:64%;position:relative;height:300px;transform:translateZ(-7.8px)}.left-side{width:16px;height:96%;background:#1e1d1d;transform:rotateY(90deg);margin-top:310px;position:relative;margin-left:0;bottom:589px}.product-inner:hover{transform:rotateY(180deg);transition:transform 1.2s linear}.back{position:relative;width:275px;height:595px;transform:rotateY(180deg);left:-63px}.front{width:275px;height:595px}@media screen and (max-width:1440px){.card{column-gap:150px}.left-side{height:96%}}@media screen and (max-width:1240px){.card{column-gap:130px}}@media screen and (max-width:1185px){.card{column-gap:100px}}@media screen and (max-width:1024px){.card{column-gap:60px}}@media screen and (max-width:768px){.section-card{padding:80px 70px}.card-block-link-botton{display:block}.card{display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr 1fr 1fr 1fr;column-gap:63px;justify-content:center}.card-block__link{font-size:14px;font-weight:600;line-height:17px;position:relative;top:0}.eng-card-block__link{top:290px}.section-card{padding:50px 70px}.card-block{margin-bottom:100px}.card-block-botton{margin-top:50px}.left-side{height:96%;margin:312px 0 0 0}}@media screen and (max-width:425px){.product-back{right:0}.section-card{padding:40px 40px}.card{column-gap:30px}.product-inner{height:78%}.card-block-botton{margin-top:80px;font-size:14px;line-height:17px;font-weight:400}.card-block-top{font-size:14px;line-height:20px}.back{width:137px;height:297px;left:0}.front{width:137px;height:297px;margin-left:5px}.card-block{width:137px;height:297px}.left-side{width:16px;height:277px;margin-top:301px;margin-left:0}.card-block__link{position:relative;top:180px}.eng-card-block__link{top:180px}.card-block{margin-bottom:140px}}@media screen and (max-width:375px){.product-back{right:0}.section-card{padding:40px 32px}.card{column-gap:30px}.product-inner{height:78%}.card-block-botton{margin-top:80px;font-size:14px;line-height:17px;font-weight:400}.card-block-top{font-size:14px;line-height:20px}.back{width:137px;height:297px;left:0}.front{width:137px;height:297px;margin-left:5px}.card-block{width:137px;height:297px}.left-side{width:16px;height:277px;margin-top:301px;margin-left:0}.card-block__link{position:relative;top:180px}.eng-card-block__link{top:180px}.card-block{margin-bottom:140px}}@media screen and (max-width:320px){.section-card{padding:40px 12px}.product-back{right:0}.card{column-gap:10px}.back{width:132px;height:297px;left:3px}.front{width:132px;height:297px;margin-left:6px}.left-side{width:16px;height:280px;margin-top:300px;margin-left:0}}
