--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -569,6 +569,12 @@ background: #1f1f26;
         left: 270px;
         top: 24px;
     }
+    .button_downloads_ios {
+        width: 125px;
+    }
+    .button_downloads_android {
+        width: 154px;
+    }  
 }
 @media screen and (max-width: 375px){
     .header__wrapper {
