--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -557,6 +557,10 @@ background: #1f1f26;
         left: 365px;
         top: 10px;
     }
+    .button__play-video{
+        background-size: 14px;
+        background-position: 17px center;
+    }
     .nav_list-elements {
         width: 345px;
     }
@@ -566,7 +570,7 @@ background: #1f1f26;
         padding-top: 16px;
     }
     .checkButton {
-        left: 270px;
+        left: 265px;
         top: 24px;
     }
     .button_downloads_ios {
@@ -574,7 +578,11 @@ background: #1f1f26;
     }
     .button_downloads_android {
         width: 154px;
-    }  
+    }
+    .button_form_circle {
+        width: 45px;
+        height: 45px;
+    }
 }
 @media screen and (max-width: 375px){
     .header__wrapper {
@@ -689,8 +697,8 @@ background: #1f1f26;
         padding-top: 8px;
     }
     .button__play-video {
-        background-size: 10px;
-        background-position: 12px center;
+        background-size: 14px;
+        background-position: 17px center;
     }
     label.logo {
         padding-left: 10px;
