--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -566,6 +566,13 @@ background: #1f1f26;
     .button_downloads_android {
         width: 154px;
     }
+    .button_form_circle {
+        width: 45px;
+        height: 45px;
+    }
+    .button__play-video {
+        background-position: 17px center;
+    }
 }
 @media screen and (max-width: 375px){
     .header__wrapper {
@@ -680,8 +687,8 @@ background: #1f1f26;
         padding-top: 8px;
     }
     .button__play-video {
-        background-size: 10px;
-        background-position: 12px center;
+        background-size: 14px;
+        background-position: 17px center;
     }
     label.logo {
         padding-left: 10px;
