--- a/assets/css/landing2.css
+++ b/assets/css/landing2.css
@@ -97,7 +97,7 @@ a{
 }
 .section-two-content-social-block,.section-two-content-social-block-mobile{
 	display:none;
-	background-image:url('image-lending/general/Group\ 1\ \(Traced\)\ \(1\).png');
+	background-image:url("");
 	background-repeat:no-repeat;
 	font-size:40px;
 	height:60px;
@@ -119,7 +119,7 @@ a{
 	text-align:center
 }
 .section-two-content-message{
-	background-image:url('image-lending/general/Group\ 1\ \(Traced\).png');
+	background-image:url('../image-lending/general/group1.png');
 	background-repeat:no-repeat;
 	font-weight:400;
 	font-size:36px;
@@ -127,7 +127,7 @@ a{
 	text-align:center
 }
 .section-two-content-social{
-	background-image:url('image-lending/general/Group\ 1\ \(Traced\)\ \(1\).png');
+	background-image:url('../image-lending/general/group2.png');
 	background-repeat:no-repeat;
 	font-size:44px;
 	height:60px;
