--- a/assets/css/landing2.css
+++ b/assets/css/landing2.css
@@ -276,7 +276,7 @@ a{
 }
 @media screen and (max-width:1440px){
 	.section-first{
-		column-gap:70px;
+		column-gap: 40px;
 		padding:70px 0
 	}
 	.section-two{
@@ -292,7 +292,8 @@ a{
 	}
 	.section-image-one{
 		width:240px;
-		height:500px
+		height:500px;
+		margin-right: 30px;
 	}
 	.section-image-two{
 		width:250px;
