--- a/assets/css/apps2.css
+++ b/assets/css/apps2.css
@@ -1,134 +1,146 @@
-.section__wrapper{
-	margin:0 250px
-}
-.lead__text{
+.section__wrapper {
+	margin:0 250px;
+	}
+	
+	.lead__text {
 	display:flex;
 	align-items:center;
 	font-size:20px;
 	line-height:22px;
 	font-weight:400;
-	width:500px
-}
-.apps__subapps{
+	width:500px;
+	}
+	
+	.apps__subapps {
 	background:#2e2e31;
 	color:#fff;
-	padding:80px 0 100px 0
-}
-.apps__subapps{
 	display:flex;
 	column-gap:160px;
 	align-items:center;
-	justify-content:center
-}
-.apps__subapps-title{
-	margin:0 0 25px 0;
-	padding:0;
+	justify-content:center;
+	padding:80px 0 100px;
+	}
+	
+	.apps__subapps-title {
 	font-size:86px;
 	line-height:104px;
 	font-weight:700;
-	color:rgba(255,255,255,.87)
-}
-.apps__subapps-list{
+	color:rgba(255,255,255,.87);
+	margin:0 0 25px;
+	padding:0;
+	}
+	
+	.apps__subapps-list {
 	display:grid;
 	grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	list-style:none;
 	margin:0;
-	padding:0
-}
-.apps__subapps-list-item{
-	padding:0
-}
-.apps__briefs-item-list{
+	padding:0;
+	}
+	
+	.apps__briefs-item-list {
 	display:flex;
 	flex-direction:column;
 	justify-content:center;
 	align-items:center;
-	color:#5f9ea0
-}
-.apps__briefs-item-list-color::marker{
-	color:#000
-}
-.apps__subapps-list-item:last-of-type{
-	margin-right:0
-}
-.apps__subapps-list-item-link{
+	color:#5f9ea0;
+	}
+	
+	.apps__briefs-item-list-color::marker {
+	color:#000;
+	}
+	
+	.apps__subapps-list-item:last-of-type {
+	margin-right:0;
+	}
+	
+	.apps__subapps-list-item-link {
 	color:rgba(255,255,255,.87);
 	text-decoration:none;
 	display:flex;
 	flex-direction:column;
 	justify-content:center;
-	align-items:center
-}
-.apps__subapps-list-item-icon{
-	margin:0;
-	padding:0;
+	align-items:center;
+	}
+	
+	.apps__subapps-list-item-icon {
 	width:60px;
 	height:60px;
-	margin-bottom:5px
-}
-.apps__subapps-list-item-icon:hover{
-	filter:invert(.1) sepia(.5) saturate(10.1) hue-rotate(126deg) brightness(.9)
-}
-.lead__text-color{
-	color:#00a9de
-}
-.apps__subapps-list-item-title{
+	margin:0 0 5px;
+	padding:0;
+	}
+	
+	.apps__subapps-list-item-icon:hover {
+	filter:invert(.1) sepia(.5) saturate(10.1) hue-rotate(126deg) brightness(.9);
+	}
+	
+	.lead__text-color {
+	color:#00a9de;
+	}
+	
+	.apps__subapps-list-item-title {
 	font-size:16px;
 	line-height:19px;
 	white-space:nowrap;
 	margin:0;
-	padding:0
-}
-.apps__briefs{
-	padding:65px 0 130px 0
-}
-.apps__briefs-list{
+	padding:0;
+	}
+	
+	.apps__briefs {
+	padding:65px 0 130px;
+	}
+	
+	.apps__briefs-list {
 	list-style:none;
 	margin:0;
-	padding:0
-}
-.apps__briefs-item{
+	padding:0;
+	}
+	
+	.apps__briefs-item {
 	display:flex;
-	flex-direction:row;
 	justify-content:space-between;
-	padding:65px 0 65px;
+	column-gap:52px;
+	flex-direction:row;
 	margin:0;
-	column-gap:52px
-}
-.apps__briefs-item{
-	flex-direction:row
-}
-.apps__brief-text-container{
+	padding:65px 0;
+	}
+	
+	.apps__brief-text-container {
 	max-width:738px;
-	margin:0;
 	display:flex;
 	flex-direction:column;
 	justify-content:center;
-	align-items:left
-}
-.apps__brief-text{
+	align-items:left;
+	margin:0;
+	}
+	
+	.apps__brief-text {
 	font-size:24px;
 	line-height:29px;
 	margin:0;
-	padding:0
-}
-.apps__brief-images-container{
+	padding:0;
+	}
+	
+	.apps__brief-images-container {
 	max-width:610px;
 	display:flex;
 	flex-direction:row;
-	align-items:flex-start
-}
-.apps__brief-image-wrapper{
+	align-items:flex-start;
+	}
+	
+	.apps__brief-image-wrapper {
 	position:relative;
 	max-width:293px;
 	max-height:592px;
 	margin-right:35px;
-	padding-bottom:50px
-}
-.apps__brief-image-wrapper:last-of-type{
-	margin:0
-}
-.apps__brief-image-wrapper::after{
+	padding-bottom:50px;
+	}
+	
+	.apps__brief-image-wrapper:last-of-type {
+	margin:0;
+	}
+	
+	.apps__brief-image-wrapper::after {
 	position:absolute;
 	content:"iOS";
 	display:block;
@@ -138,349 +150,422 @@
 	height:29px;
 	text-align:center;
 	bottom:0;
-	left:0
-}
-.apps__brief-image{
+	left:0;
+	}
+	
+	.apps__brief-image {
 	width:263px;
-	height:580px
-}
-.apps__brief-image-wrapper:last-of-type::after{
-	content:"Android"
-}
-.apps__future{
-	padding:0 0 0
-}
-.align_center,.align_wiper{
+	height:580px;
+	}
+	
+	.apps__brief-image-wrapper:last-of-type::after {
+	content:"Android";
+	}
+	
+	.align_center,.align_wiper {
 	font-size:48px;
 	line-height:58px;
 	font-weight:700;
-	margin:70px 200px
-}
-.swiper{
+	margin:70px 200px;
+	}
+	
+	.swiper {
 	width:100%;
-	height:560px
-}
-.swiper-slide{
+	height:560px;
+	}
+	
+	.swiper-slide {
 	width:350px;
-	height:498px
-}
-.swiper-slide__wrapper{
+	height:498px;
+	}
+	
+	.swiper-slide__wrapper {
 	display:flex;
 	flex-direction:column;
 	justify-content:space-between;
 	align-items:center;
-	padding:36px
-}
-.swiper-slide__image-wrapper{
+	padding:36px;
+	}
+	
+	.swiper-slide__image-wrapper {
 	width:163px;
 	height:351px;
-	margin-bottom:32px
-}
-.swiper-slide__title{
+	margin-bottom:32px;
+	}
+	
+	.swiper-slide__title {
 	font-size:22px;
 	line-height:27px;
 	white-space:nowrap;
 	margin-left:20px;
-	padding:0
-}
-@media screen and (max-width:1440px){
-	.section__wrapper{
-		margin:0 110px
-	}
-	.apps__briefs-item{
-		column-gap:30px
-	}
-	.apps__brief-text-container{
-		max-width:538px
-	}
-	.apps__subapps-title{
-		margin:0 0 25px 0;
-		padding:0;
-		font-size:76px;
-		line-height:95px;
-		font-weight:700
-	}
-	.apps__subapps{
-		padding:30px 0 100px 0
-	}
-	.apps__subapps{
-		column-gap:90px
-	}
-}
-@media screen and (max-width:1240px){
-	.section__wrapper{
-		margin:0 70px
-	}
-	.apps__subapps-title{
-		font-size:60px;
-		line-height:95px;
-		font-weight:700
-	}
-	.align_wiper{
-		margin:70px 100px
-	}
-}
-@media screen and (max-width:1024px){
-	.apps__subapps{
-		column-gap:16px
-	}
-	.apps__subapps-title{
-		font-size:49px
-	}
-	.section__wrapper{
-		margin:0 20px
-	}
-	.apps__briefs-item-list{
-		display:none
-	}
-}
-@media screen and (max-width:992px){
-	.section__wrapper{
-		margin:0 50px
-	}
-}
-@media screen and (max-width:768px){
-	.align_wiper{
-		margin:30px 90px 0 0
-	}
-	.section__wrapper{
-		margin:0 90px
-	}
-	.apps__subapps{
-		column-gap:70px;
-		flex-direction:column;
-		justify-content:flex-start;
-		align-items:flex-start
-	}
-	.apps__brief-text-container{
-		max-width:531px;
-		margin-bottom:100px
-	}
-	.apps__briefs{
-		padding:64px 0 0 0
-	}
-	.apps__subapps-list{
-		grid-template-columns:1fr 1fr 1fr;
-		grid-template-rows:1fr 1fr 1fr;
-		justify-items:center
-	}
-	.apps__briefs-item{
-		flex-direction:column;
-		justify-content:center;
-		align-items:center;
-		padding:0;
-		row-gap:30px
-	}
-	.apps__briefs-item-list{
-		display:none
-	}
-	.apps__subapps{
-		padding:80px 0 60px 0
-	}
-	.apps__brief-image-wrapper{
-		margin-right:23px
-	}
-	.apps__subapps-wrapper{
-		width:576px
-	}
-	.apps__subapps-title{
-		margin:50px 0 25px 0;
-		font-size:48px;
-		line-height:58px;
-		font-weight:700
-	}
-	.apps__subapps-list-item{
-		margin:0 0 10px 0
-	}
-	.lead__text{
-		font-size:18px;
-		line-height:22px;
-		font-weight:400
-	}
-	.section__title{
-		text-align:center;
-		font-size:32px;
-		line-height:38px;
-		font-weight:700
-	}
-	.apps__brief-text{
-		text-align:center;
-		font-size:18px;
-		line-height:21px;
-		font-weight:400
-	}
-	.apps__future{
-		padding:0
-	}
-}
-@media screen and (max-width:425px){
-	.section__wrapper{
-		margin:0 45px
-	}
-	.apps__subapps-wrapper{
-		width:320px
-	}
-	.apps__subapps-list{
-		justify-items:stretch
-	}
-	.apps__subapps{
-		padding:70px 0 80px 0
-	}
-	.apps__brief-image-wrapper::after{
-		font-size:14px;
-		line-height:17px;
-		font-weight:400;
-		height:29px
-	}
-	.apps__subapps-title{
-		margin:0 0 10px 0;
-		font-size:22px;
-		line-height:26px;
-		font-weight:600
-	}
-	.apps__brief-image{
-		width:132px;
-		height:292px
-	}
-	.lead__text{
-		font-size:14px;
-		line-height:17px;
-		font-weight:400;
-		width:310px
-	}
-	.apps__briefs-item{
-		row-gap:20px
-	}
-	.apps__brief-text-container{
-		margin-bottom:80px
-	}
-	.apps__brief-text{
-		font-size:14px;
-		line-height:17px;
-		font-weight:600
-	}
-	.lead__download-links-list{
-		flex-direction:column-reverse;
-		row-gap:20px;
-		margin-top:300px;
-		margin-left:25px
-	}
-	.swiper-slide__image-wrapper{
-		width:89px;
-		height:191px;
-		margin-bottom:130px
-	}
-	.swiper-slide__wrapper{
-		padding:100px 0 0 0
-	}
-	.swiper-slide__title{
-		font-size:14px;
-		line-height:17px;
-		font-weight:600;
-		margin-left:60px
-	}
-	.section__title{
-		font-size:18px;
-		line-height:22px;
-		font-weight:600
-	}
-	.apps__subapps-list-item-title{
-		font-size:14px;
-		line-height:17px;
-		font-weight:400
-	}
-	.swiper-slide__image{
-		width:150px
-	}
-	.align_wiper{
-		margin:0
-	}
-}
-@media screen and (max-width:376px){
-	.section__wrapper{
-		margin:0 15px
-	}
-	.apps__subapps-wrapper{
-		width:320px
-	}
-	.apps__subapps-list{
-		justify-items:stretch
-	}
-	.apps__subapps{
-		padding:70px 0 80px 0
-	}
-	.apps__brief-image-wrapper::after{
-		font-size:14px;
-		line-height:17px;
-		font-weight:400;
-		height:29px
-	}
-	.apps__subapps-title{
-		margin:0 0 10px 0;
-		font-size:22px;
-		line-height:26px;
-		font-weight:600
-	}
-	.apps__brief-image{
-		width:132px;
-		height:292px
-	}
-	.lead__text{
-		font-size:14px;
-		line-height:17px;
-		font-weight:400;
-		width:310px
-	}
-	.apps__briefs-item{
-		row-gap:20px
-	}
-	.apps__brief-text-container{
-		margin-bottom:80px
-	}
-	.apps__brief-text{
-		font-size:14px;
-		line-height:17px;
-		font-weight:600
-	}
-	.lead__download-links-list{
-		flex-direction:column-reverse;
-		row-gap:20px;
-		margin-top:300px;
-		margin-left:25px
-	}
-	.swiper-slide__image-wrapper{
-		width:89px;
-		height:191px;
-		margin-bottom:192px
-	}
-	.swiper-slide__title{
-		font-size:14px;
-		line-height:17px;
-		font-weight:600;
-		margin-left:60px
-	}
-	.section__title{
-		font-size:18px;
-		line-height:22px;
-		font-weight:600
-	}
-	.apps__subapps-list-item-title{
-		font-size:14px;
-		line-height:17px;
-		font-weight:400
-	}
-}
-@media screen and (max-width:320px){
-	.apps__subapps-wrapper{
-		width:300px
-	}
-	.lead__text{
-		width:256px
-	}
-	.section__wrapper{
-		margin:0 5px
-	}
-	.apps__subapps{
-		padding:50px 0 40px 0
-	}
-}
+	padding:0;
+	}
+	
+	.apps__subapps-list-item,.apps__future {
+	padding:0;
+	}
+	
+	@media screen and (max-width:1440px){
+	.section__wrapper {
+	margin:0 110px;
+	}
+	
+	.apps__briefs-item {
+	column-gap:30px;
+	}
+	
+	.apps__brief-text-container {
+	max-width:538px;
+	}
+	
+	.apps__subapps-title {
+	font-size:76px;
+	line-height:95px;
+	font-weight:700;
+	margin:0 0 25px;
+	padding:0;
+	}
+	
+	.apps__subapps {
+	column-gap:90px;
+	padding:30px 0 100px;
+	}
+	}
+	
+	@media screen and (max-width:1240px){
+	.section__wrapper {
+	margin:0 70px;
+	}
+	
+	.apps__subapps-title {
+	font-size:60px;
+	line-height:95px;
+	font-weight:700;
+	}
+	
+	.align_wiper {
+	margin:70px 100px;
+	}
+	}
+	
+	@media screen and (max-width:1024px){
+	.apps__subapps {
+	column-gap:16px;
+	}
+	
+	.apps__subapps-title {
+	font-size:49px;
+	}
+	
+	.section__wrapper {
+	margin:0 20px;
+	}
+	
+	.apps__briefs-item-list {
+	display:none;
+	}
+	}
+	
+	@media screen and (max-width:992px){
+	.section__wrapper {
+	margin:0 50px;
+	}
+	}
+	
+	@media screen and (max-width:768px){
+	.align_wiper {
+	margin:30px 90px 0 0;
+	}
+	
+	.section__wrapper {
+	margin:0 90px;
+	}
+	
+	.apps__subapps {
+	column-gap:70px;
+	flex-direction:column;
+	justify-content:flex-start;
+	align-items:flex-start;
+	padding:80px 0 60px;
+	}
+	
+	.apps__brief-text-container {
+	max-width:531px;
+	margin-bottom:100px;
+	}
+	
+	.apps__briefs {
+	padding:64px 0 0;
+	}
+	
+	.apps__subapps-list {
+	grid-template-columns:1fr 1fr 1fr;
+	grid-template-rows:1fr 1fr 1fr;
+	justify-items:center;
+	}
+	
+	.apps__briefs-item {
+	flex-direction:column;
+	justify-content:center;
+	align-items:center;
+	row-gap:30px;
+	padding:0;
+	}
+	
+	.apps__briefs-item-list {
+	display:none;
+	}
+	
+	.apps__brief-image-wrapper {
+	margin-right:23px;
+	}
+	
+	.apps__subapps-wrapper {
+	width:576px;
+	}
+	
+	.apps__subapps-title {
+	font-size:48px;
+	line-height:58px;
+	font-weight:700;
+	margin:50px 0 25px;
+	}
+	
+	.apps__subapps-list-item {
+	margin:0 0 10px;
+	}
+	
+	.lead__text {
+	font-size:18px;
+	line-height:22px;
+	font-weight:400;
+	}
+	
+	.section__title {
+	text-align:center;
+	font-size:32px;
+	line-height:38px;
+	font-weight:700;
+	}
+	
+	.apps__brief-text {
+	text-align:center;
+	font-size:18px;
+	line-height:21px;
+	font-weight:400;
+	}
+	
+	.apps__future {
+	padding:0;
+	}
+	}
+	
+	@media screen and (max-width:425px){
+	.section__wrapper {
+	margin:0 45px;
+	}
+	
+	.apps__subapps-wrapper {
+	width:320px;
+	}
+	
+	.apps__subapps-list {
+	justify-items:stretch;
+	}
+	
+	.apps__subapps {
+	padding:70px 0 80px;
+	}
+	
+	.apps__brief-image-wrapper::after {
+	font-size:14px;
+	line-height:17px;
+	font-weight:400;
+	height:29px;
+	}
+	
+	.apps__subapps-title {
+	font-size:22px;
+	line-height:26px;
+	font-weight:600;
+	margin:0 0 10px;
+	}
+	
+	.apps__brief-image {
+	width:132px;
+	height:292px;
+	}
+	
+	.lead__text {
+	font-size:14px;
+	line-height:17px;
+	font-weight:400;
+	width:310px;
+	}
+	
+	.apps__briefs-item {
+	row-gap:20px;
+	}
+	
+	.apps__brief-text-container {
+	margin-bottom:80px;
+	}
+	
+	.apps__brief-text {
+	font-size:14px;
+	line-height:17px;
+	font-weight:600;
+	}
+	
+	.lead__download-links-list {
+	flex-direction:column-reverse;
+	row-gap:20px;
+	margin-top:300px;
+	margin-left:25px;
+	}
+	
+	.swiper-slide__image-wrapper {
+	width:89px;
+	height:191px;
+	margin-bottom:130px;
+	}
+	
+	.swiper-slide__wrapper {
+	padding:100px 0 0;
+	}
+	
+	.swiper-slide__title {
+	font-size:14px;
+	line-height:17px;
+	font-weight:600;
+	margin-left:60px;
+	}
+	
+	.section__title {
+	font-size:18px;
+	line-height:22px;
+	font-weight:600;
+	}
+	
+	.apps__subapps-list-item-title {
+	font-size:14px;
+	line-height:17px;
+	font-weight:400;
+	}
+	
+	.swiper-slide__image {
+	width:150px;
+	}
+	
+	.align_wiper {
+	margin:0;
+	}
+	}
+	
+	@media screen and (max-width:376px){
+	.section__wrapper {
+	margin:0 15px;
+	}
+	
+	.apps__subapps-wrapper {
+	width:320px;
+	}
+	
+	.apps__subapps-list {
+	justify-items:stretch;
+	}
+	
+	.apps__subapps {
+	padding:70px 0 80px;
+	}
+	
+	.apps__brief-image-wrapper::after {
+	font-size:14px;
+	line-height:17px;
+	font-weight:400;
+	height:29px;
+	}
+	
+	.apps__subapps-title {
+	font-size:22px;
+	line-height:26px;
+	font-weight:600;
+	margin:0 0 10px;
+	}
+	
+	.apps__brief-image {
+	width:132px;
+	height:292px;
+	}
+	
+	.lead__text {
+	font-size:14px;
+	line-height:17px;
+	font-weight:400;
+	width:310px;
+	}
+	
+	.apps__briefs-item {
+	row-gap:20px;
+	}
+	
+	.apps__brief-text-container {
+	margin-bottom:80px;
+	}
+	
+	.apps__brief-text {
+	font-size:14px;
+	line-height:17px;
+	font-weight:600;
+	}
+	
+	.lead__download-links-list {
+	flex-direction:column-reverse;
+	row-gap:20px;
+	margin-top:300px;
+	margin-left:25px;
+	}
+	
+	.swiper-slide__image-wrapper {
+	width:89px;
+	height:191px;
+	margin-bottom:192px;
+	}
+	
+	.swiper-slide__title {
+	font-size:14px;
+	line-height:17px;
+	font-weight:600;
+	margin-left:60px;
+	}
+	
+	.section__title {
+	font-size:18px;
+	line-height:22px;
+	font-weight:600;
+	}
+	
+	.apps__subapps-list-item-title {
+	font-size:14px;
+	line-height:17px;
+	font-weight:400;
+	}
+	}
+	
+	@media screen and (max-width:320px){
+	.apps__subapps-wrapper {
+	width:300px;
+	}
+	
+	.lead__text {
+	width:256px;
+	}
+	
+	.section__wrapper {
+	margin:0 5px;
+	}
+	
+	.apps__subapps {
+	padding:50px 0 40px;
+	}
+	}
